[gd_scene load_steps=11 format=3 uid="uid://c8gdc1dstca1p"]

[ext_resource type="Script" path="res://bomb_screen.gd" id="1_ngyt5"]
[ext_resource type="Texture2D" uid="uid://oc1o0v05d24d" path="res://bomb_screen/Bomb_selection_screen_Earth.png" id="2_pheky"]
[ext_resource type="Texture2D" uid="uid://yuk7cgeft1oi" path="res://bomb_screen/Bomb_selection_screen_Hell.png" id="3_0gh3l"]
[ext_resource type="Texture2D" uid="uid://cx2j4j0prxl82" path="res://bomb_screen/Bomb_selection_screen_Moon.png" id="4_2t3kp"]
[ext_resource type="Material" uid="uid://c1hxykuwxtk6q" path="res://bomb_screen/bomb_progress_bar_material.tres" id="5_t2800"]
[ext_resource type="Texture2D" uid="uid://jmlcmsgv3o7g" path="res://bomb_screen/bomb_progress_bar.png" id="5_xtt0k"]
[ext_resource type="LabelSettings" uid="uid://dt56xoefo3wq2" path="res://dialogText.tres" id="5_yb0lf"]
[ext_resource type="Texture2D" uid="uid://felxuxtgu6sg" path="res://bomb_screen/bomb_progress.png" id="6_63yq0"]
[ext_resource type="FontFile" uid="uid://7g8ueqruyfci" path="res://mago3.ttf" id="6_siull"]

[sub_resource type="LabelSettings" id="LabelSettings_1f004"]
line_spacing = -3.0
font = ExtResource("6_siull")
font_size = 32
shadow_size = 0

[node name="bombScreen" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ngyt5")
hell_color = Color(0.705882, 0.12549, 0.164706, 1)
earth_color = Color(0.141176, 0.623529, 0.870588, 1)
moon_color = Color(0.996078, 0.952941, 0.752941, 1)
hell_and_earth_color = Color(0.47451, 0.227451, 0.501961, 1)
earth_and_moon_color = Color(0.0784314, 0.627451, 0.180392, 1)
moon_and_hell_color = Color(0.980392, 0.415686, 0.0392157, 1)
all_color = Color(1, 0.9725, 0.85, 1)
not_enough_bombs_color = Color(0.71, 0.71, 0.71, 1)

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 256.0
offset_bottom = 224.0
color = Color(0, 0, 0, 0.498039)

[node name="Earth" type="Sprite2D" parent="."]
position = Vector2(0, 48)
texture = ExtResource("2_pheky")
centered = false

[node name="Hell" type="Sprite2D" parent="."]
position = Vector2(0, 48)
texture = ExtResource("3_0gh3l")
centered = false

[node name="Moon" type="Sprite2D" parent="."]
position = Vector2(0, 48)
texture = ExtResource("4_2t3kp")
centered = false

[node name="TextureProgressBarBorder" type="TextureProgressBar" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -87.0
offset_top = -44.0
offset_right = 87.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 0
value = 16.0
texture_over = ExtResource("5_xtt0k")

[node name="TextureProgressBar" type="TextureProgressBar" parent="TextureProgressBarBorder"]
material = ExtResource("5_t2800")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
value = 22.0
texture_progress = ExtResource("6_63yq0")
metadata/_edit_lock_ = true

[node name="LabelHell" type="Label" parent="."]
modulate = Color(0.705882, 0.12549, 0.164706, 1)
layout_mode = 0
offset_left = 68.0
offset_top = 122.0
offset_right = 182.0
offset_bottom = 138.0
text = "dam"
label_settings = ExtResource("5_yb0lf")

[node name="LabelEarth" type="Label" parent="."]
modulate = Color(0.156863, 0.360784, 0.768627, 1)
layout_mode = 0
offset_left = 68.0
offset_top = 138.0
offset_right = 182.0
offset_bottom = 154.0
text = "heal"
label_settings = ExtResource("5_yb0lf")

[node name="LabelMoon" type="Label" parent="."]
modulate = Color(0.996078, 0.952941, 0.752941, 1)
layout_mode = 0
offset_left = 68.0
offset_top = 154.0
offset_right = 182.0
offset_bottom = 169.0
theme_override_colors/font_color = Color(0.996078, 0.952941, 0.752941, 1)
text = "mystery"
label_settings = ExtResource("5_yb0lf")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_right = 256.0
offset_bottom = 26.0
text = "POWER YOUR BOMB"
label_settings = SubResource("LabelSettings_1f004")
horizontal_alignment = 1
